add PostgreSQL listings search
